--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "telegram-bot",
+  "name": "weather_api",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +11,6 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "mysql2": "^3.15.3",
-    "node-telegram-bot-api": "^0.63.0"
+    "mysql2": "^3.15.3"
   }
 }
